--- a/e-shime/package.json
+++ b/e-shime/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "E-SHIME User Interface Design",
+      "name": "E-SHIME",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
